# advent-of-code-2026

./: .gitignore
day01/: LICENSE  day01.cabal
day01/app/: Lib.hs  Main.hs
day01/test/: LibSpec.hs
