cabal-version:      3.0
name:               day01
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
common warnings
    ghc-options: -Wall
executable day01
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Lib

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base ^>=4.18.3.0

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite day01-test
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    other-modules:    LibSpec, Lib
    hs-source-dirs:   test, app
    build-depends:
        base ^>=4.18.3.0,
        hspec
    build-tool-depends:
        hspec-discover:hspec-discover
    default-language: Haskell2010
